BlueGreenDeploy/Deploy_V4/frontend-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-green-deployment
  namespace: bluegreen
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-green
  template:
    metadata:
      labels:
        app: frontend-green
    spec:
      containers:
        - name: frontend-green
          image: hv_skilltest_blue-green-deployment-frontend-green:v2
          ports:
            - containerPort: 3200
          livenessProbe:
            httpGet:
              path: /health
              port: 3200
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3200
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-green-service
  namespace: bluegreen
spec:
  type: ClusterIP
  selector:
    app: frontend-green
  ports:
    - name: http
      port: 3200
      targetPort: 3200
